[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyutil_bq_xiexingwu"
version = "0.0.1"
authors = [
  { name="Michael X", email="xiexingwu2@gmail.com" },
]
description = "Python utility tools to interface with BigQuery."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xiexingwu/pyutil-bq"
"Bug Tracker" = "https://github.com/xiexingwu/pyutil-bq/issues"